--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiofiles==24.1.0
-aiogram==3.22.0
+aiogram==3.23.0
+redis>=5.0.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
@@ -18,4 +19,3 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 yarl==1.22.0
 httpx>=0.23.0,<1.0.0
-aiogram[redis]>=3.23.0
